# hoel

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README_8md.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  group__const.html  group__escape.html  group__h__result.html  group__init.html  group__json.html  group__memory.html  group__struct.html  h-private_8h.html  h-private_8h_source.html  hoel-mariadb_8c.html  hoel-pgsql_8c.html  hoel-simple-json_8c.html  hoel-sqlite_8c.html  hoel_8c.html  hoel_8h.html  hoel_8h_source.html  index.html  libhoel.pc.in  menudata.js  modules.html  struct__h__connection.html  struct__h__data.html  struct__h__result.html  (+5 more)
.github/workflows/: ccpp.yml  codeql-analysis.yml
cmake-modules/: FindLibPQ.cmake  FindMYSQL.cmake  FindMariaDB.cmake  HoelConfig.cmake.in
doc/: doxygen.cfg
doc/html/: README_8md.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  group__JSON.html  group____h__result.html  group__const.html  group__escape.html  group__h__result.html  group__init.html  group__json.html  group__memory.html  group__query.html  group__struct.html  h-private_8h.html  h-private_8h_source.html  hoel-mariadb_8c.html  hoel-pgsql_8c.html  hoel-simple-json_8c.html  hoel-sqlite_8c.html  hoel_8c.html  hoel_8h.html  hoel_8h_source.html  index.html  modules.html  struct__h__connection.html  struct__h__data.html  struct__h__result.html  struct__h__type__blob.html  struct__h__type__datetime.html  struct__h__type__double.html  struct__h__type__int.html  struct__h__type__text.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_c.js  all_e.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_5.js  groups_6.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js
examples/: Makefile  example_mariadb.c  example_mariadb.sql  example_mariadb_binary.c  example_mariadb_json.c  example_multi_mariadb.c  example_mysql.c  example_pgsql.c  example_sqlite3.c  example_sqlite3.sql
include/: h-private.h  hoel-cfg.h.in  hoel.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  pages_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/: Makefile  h-private.h  hoel-mariadb.c  hoel-pgsql.c  hoel-simple-json.c  hoel-sqlite.c  hoel.c  hoel.h
test/: Makefile  core  core.c  multi.c  test.mariadb.sql  test.pgsql.sql  test.sql  test.sqlite3.sql
